修改cvt类的参数可设置范围

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "merging config from ./config_cvt/config.yaml\n"
+      "merging config from ./configs/cvt-13-224x224.yaml\n",
+      "merging config from ./config_torch/config.yaml\n"
      ]
     }
    ],
@@ -19,20 +20,20 @@
     "import paddle\n",
     "import torch\n",
     "import os\n",
-    "from config_cvt.default import get_config\n",
+    "from config_torch.default import get_config_torch\n",
     "import torchvision.models as models\n",
-    "from cvt import generate_model\n",
+    "from cvt import build_cvt\n",
     "from cvt_torch import get_cls_model\n",
-    "\n",
+    "from config import get_config\n",
     "\n",
     "model_name = 'CvT-13-224x224-IN-1k.pth'\n",
     "\n",
-    "config=get_config('./config_cvt/config.yaml')\n",
+    "config=get_config('./configs/cvt-13-224x224.yaml')\n",
     "paddle.set_device('cpu')\n",
-    "paddle_model = generate_model(config)\n",
+    "paddle_model = build_cvt(config)\n",
     "paddle_model.eval()\n",
     "\n",
-    "\n",
+    "config=get_config_torch('./config_torch/config.yaml')\n",
     "device = torch.device('cpu')\n",
     "torch_model= get_cls_model(config)\n",
     "torch_model.load_state_dict= torch.load(model_name,map_location=torch.device('cpu'))\n",
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,18 +156,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.0530,  0.2615,  0.3982,  ...,  1.1244, -0.3457, -0.7538],\n",
-       "        [ 0.2151, -0.1041,  0.1985,  ...,  0.8779, -0.3890, -0.5575]],\n",
+       "tensor([[ 0.0091,  0.4253,  0.1592,  ...,  0.6132, -0.1710, -0.2223],\n",
+       "        [ 0.1331,  0.2598, -0.1350,  ...,  0.2023,  0.1777,  0.0585]],\n",
        "       grad_fn=<AddmmBackward0>)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,18 +178,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Tensor(shape=[2, 1000], dtype=float32, place=CPUPlace, stop_gradient=False,\n",
-       "       [[ 0.0530,  0.2615,  0.3982, ...,  1.1244, -0.3457, -0.7538],\n",
-       "        [ 0.2151, -0.1041,  0.1985, ...,  0.8779, -0.3890, -0.5575]])"
+       "       [[ 0.0091,  0.4253,  0.1592, ...,  0.6132, -0.1710, -0.2223],\n",
+       "        [ 0.1331,  0.2598, -0.1350, ...,  0.2023,  0.1777,  0.0585]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,9 +200,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "out_torch = out_torch.data.cpu().numpy()\n",
@@ -224,6 +236,27 @@
     "model_path = os.path.join(f'./{model_name}.pdparams')\n",
     "paddle.save(paddle_model.state_dict(), model_path)\n",
     "file_debug.write('all done')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 4\n",
+      "9 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in range(10):\n",
+    "    for y in range(10):\n",
+    "        if (16*x+39*y-x*y)==204:\n",
+    "            print(x,y)\n"
    ]
   }
  ],
